--- a/index.html
+++ b/index.html
@@ -92,25 +92,19 @@
               </p>
               <p>
                 I am a masters student in Computer Science at the University of Toronto and a member of the 
-                <a href="https://vectorinstitute.ai/">Vector Institute</a>.
-                I'm advised by Dr. Anna Goldenberg.
+                <a href="https://vectorinstitute.ai/">Vector Institute</a>. I recently graduated from the 
+                <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
+                at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. 
               </p>
               <p>
-                My research focuses on AI in healthcare, and I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series. 
-                  I graduated from the 
-                  <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
-                  at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. I've been fortunate to collaborate with <a href="https://bloodgenes.org">Dr. Vijay Sankaran and Dr. Caleb Lareau</a> at 
-                  <a href="https://www.broadinstitute.org/">the Broad Institute</a>, Dr. Rosanna Weksberg and Dr. Sanaa Choufani
-                  at <a href="http://sickkids.ca/">the SickKids Institute</a>, Dr. Janet Ronsky and Dr. Tomasz Bugajski at the 
-                  <a href="https://mccaig.ucalgary.ca/">McCaig Institute</a>, and colleagues from 
-                  <a href="https://www.ibm.com/ca-en">IBM Labs</a>. 
+                My research focuses on AI in healthcare, and I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series.
               </p>
+            <!--
               <p>
-                I intend to set aside a few hours each week for research discussions and mentorship. If you feel this could be of 
+              I intend to set aside a few hours each week for research discussions and mentorship. If you feel this could be of 
                 benefit to you, please book an open slot <a href="https://calendly.com/gargkopal24/15min">here</a>.
               </p>
-              
-
+            -->
 
               <p style="text-align:center">
                 kopal[at]cs.toronto.edu &nbsp/&nbsp
@@ -256,7 +250,7 @@
 
         </div>
         <p></p>
-        
+
         <!-- Research Projects  -->
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tbody>
