--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <img src="images/UofT-Crest-Square.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>MSc in Computer Science</papertitle>
+              <papertitle>M.Sc. in Computer Science</papertitle>
               <br>
                 Department of Computer Science, University of Toronto
               <br>
@@ -158,7 +158,7 @@
               <img src="images/UW-Crest-Square.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>B.A.Sc in Biomedical Engineering</papertitle>
+              <papertitle>B.A.Sc in Biomedical Engineering, Co-op</papertitle>
               <br>
                 Faculty of Applied Science and Engineering, University of Waterloo 
               <br>
