--- a/index.html
+++ b/index.html
@@ -384,11 +384,11 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <img src="images/ery1.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="50%" valign="middle">
-              <papertitle>App for schematic of gene expression during adult and fetal erythropoiesis
+              <papertitle>Web-app: gene expression
               </papertitle>
               <br>
-              <a href="https://github.com/kopalgarg/erythroid-gene-expression">github</a>
-              <br>
+              <p>Display the schematic of gene expression during adult and fetal erythropoiesis.</p> |
+              <a href="https://github.com/kopalgarg/erythroid-gene-expression">github</a> |
               <a href="https://sankaranlab.shinyapps.io/geneExpression">app</a>
             </td>
           </tr>
@@ -400,10 +400,9 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <img src="images/gnomad.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="50%" valign="middle">
-              <papertitle>gnomAD Gene Model</papertitle>
+              <papertitle>Web-app: gnomAD Gene Model</papertitle>
               <br>
-              <a href="https://github.com/kopalgarg/gnomAD_gene_model">github</a>
-              <br>
+              <a href="https://github.com/kopalgarg/gnomAD_gene_model">github</a> |
               <a href="https://sankaranlab.shinyapps.io/gnomad_gene_model">app</a>
             </td>
           </tr>
@@ -415,8 +414,9 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <img src="images/gggwas.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="50%" valign="middle">
-              <papertitle>R package for various Genome-Wide Association Study visualizations</papertitle>
+              <papertitle>R package: gggwas</papertitle>
               <br>
+              <p>R package for various Genome-Wide Association Study visualizations.</p> |
               <a href="https://github.com/kopalgarg/gwas-vis">github</a>
             </td>
           </tr>
@@ -441,9 +441,10 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <img src="images/rna.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="50%" valign="middle">
-              <papertitle>R-shiny app to visualize frequncies of isoforms within single genes for different hematopoietic cell lines
+              <papertitle>Web-app: isoform frequencies 
               </papertitle>
               <br>
+              <p>Visualize frequncies of isoforms within single genes for different hematopoietic cell lines</p> |
               <a href="https://github.com/kopalgarg/rna-seq_transcript-count">github</a>
             </td>
           </tr>
@@ -455,9 +456,10 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <img src="images/vv.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="50%" valign="middle">
-              <papertitle>App for interactive variant tables for easy filtering
+              <papertitle>Web-app: variant filtering
               </papertitle>
               <br>
+              <p>Interactive variant tables for easy filtering.</p> |
               <a href="https://github.com/kopalgarg/variantviewer">github</a>
             </td>
           </tr>
