--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <br>
               <em>CSC2612</em>, 2021
               <br>
-              <a href="data/CSC2612-final-report.pdf">report</a>
+              <a href="data/CSC2612-final-report.pdf">report</a> |
               <a href="https://github.com/kopalgarg/hate_speech_classification">github</a>
             </td>
           </tr>
@@ -383,7 +383,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/ery1.png" alt="clean-usnob" width="140" height="140">
             </td>
-            <td width="50%" valign="middle">
+            <td width="75%" valign="middle">
               <papertitle>Web-app: gene expression
               </papertitle>
               <br>
@@ -399,7 +399,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/gnomad.png" alt="clean-usnob" width="140" height="140">
             </td>
-            <td width="50%" valign="middle">
+            <td width="75%" valign="middle">
               <papertitle>Web-app: gnomAD Gene Model</papertitle>
               <br>
               <a href="https://github.com/kopalgarg/gnomAD_gene_model">github</a> |
@@ -413,7 +413,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/gggwas.png" alt="clean-usnob" width="140" height="140">
             </td>
-            <td width="50%" valign="middle">
+            <td width="75%" valign="middle">
               <papertitle>R package: gggwas</papertitle>
               <br>
               <p>R package for various Genome-Wide Association Study visualizations.</p> |
@@ -427,7 +427,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/hair.png" alt="clean-usnob" width="140" height="140">
             </td>
-            <td width="50%" valign="middle">
+            <td width="75%" valign="middle">
               <papertitle>Deep Learning for face shape classification and hair-style recommendation</papertitle>
               <br>
               <a href="https://github.com/kopalgarg/hair-style-recommendation">github</a>
@@ -440,7 +440,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/rna.png" alt="clean-usnob" width="140" height="140">
             </td>
-            <td width="50%" valign="middle">
+            <td width="75%" valign="middle">
               <papertitle>Web-app: isoform frequencies 
               </papertitle>
               <br>
@@ -455,7 +455,7 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/vv.png" alt="clean-usnob" width="140" height="140">
             </td>
-            <td width="50%" valign="middle">
+            <td width="75%" valign="middle">
               <papertitle>Web-app: variant filtering
               </papertitle>
               <br>
