--- a/index.html
+++ b/index.html
@@ -387,9 +387,9 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <papertitle>Web-app: gene expression
               </papertitle>
               <br>
-              <p>Display the schematic of gene expression during adult and fetal erythropoiesis.</p> |
+              <p>Display the schematic of gene expression during adult and fetal erythropoiesis |
               <a href="https://github.com/kopalgarg/erythroid-gene-expression">github</a> |
-              <a href="https://sankaranlab.shinyapps.io/geneExpression">app</a>
+              <a href="https://sankaranlab.shinyapps.io/geneExpression">app</a> </p>
             </td>
           </tr>
         </tbody></table>
@@ -416,8 +416,8 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
             <td width="75%" valign="middle">
               <papertitle>R package: gggwas</papertitle>
               <br>
-              <p>R package for various Genome-Wide Association Study visualizations.</p> |
-              <a href="https://github.com/kopalgarg/gwas-vis">github</a>
+              <p>R package for various Genome-Wide Association Study visualizations |
+              <a href="https://github.com/kopalgarg/gwas-vis">github</a></p>
             </td>
           </tr>
         </tbody></table>
@@ -444,8 +444,8 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <papertitle>Web-app: isoform frequencies 
               </papertitle>
               <br>
-              <p>Visualize frequncies of isoforms within single genes for different hematopoietic cell lines</p> |
-              <a href="https://github.com/kopalgarg/rna-seq_transcript-count">github</a>
+              <p>Visualize frequncies of isoforms within single genes for different hematopoietic cell lines |
+              <a href="https://github.com/kopalgarg/rna-seq_transcript-count">github</a></p>
             </td>
           </tr>
         </tbody></table>
@@ -459,8 +459,8 @@ Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
               <papertitle>Web-app: variant filtering
               </papertitle>
               <br>
-              <p>Interactive variant tables for easy filtering.</p> |
-              <a href="https://github.com/kopalgarg/variantviewer">github</a>
+              <p>Interactive variant tables for easy filtering. |
+              <a href="https://github.com/kopalgarg/variantviewer">github</a> </p>
             </td>
           </tr>
         </tbody></table>
