--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. 
               </p>
               <p>
-                My research focuses on AI in healthcare. I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series.
+                My research focuses on AI in healthcare. I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series, and genomic data.
               </p>
             <!--
               <p>
