--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 I am a masters student in Computer Science at the University of Toronto and a member of the 
                 <a href="https://vectorinstitute.ai/">Vector Institute</a>. I recently graduated from the 
                 <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
-                at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. 
+                at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. I am passionate about leveraging deep learning, machine learning and data science to build systems for improving various aspects of life.
               </p>
               <p>
                 My research focuses on AI in healthcare. I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series, and genomic data.
