--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Kopal Garg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Kopal Garg - Machine Learning and Time-Series</title>
+    <title>Kopal Garg - MSc CS UofT | UWaterloo Engineering</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="main.css">
