--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Kopal Garg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Kopal Garg - MSc CS UofT | UWaterloo Engineering</title>
+    <title>Kopal Garg - MSc CS UofT | Engineering UWaterloo '21'</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -268,7 +268,7 @@
               <img src="images/garg2.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Categorizing Change Points with Time Varying Networks</papertitle>
+              <papertitle>Time-Varying Correlation Networks for Interpretable Change Point Detection</papertitle>
               <br>
               <strong>Kopal Garg</strong>, Sana Tonekaboni, Anna Goldenberg
               <br>
@@ -285,11 +285,10 @@
               <img src="images/lareau.png" alt="clean-usnob" width="140" height="140">
             </td>
             <td width="75%" valign="middle">
-              <papertitle>Cellular states, purifying selection, and clonal dynamics in Pearson syndrome revealed via single-cell multi-omics</papertitle>
+              <papertitle>Single-cell multi-omics reveals dynamics of purifying selection of pathogenic mitochondrial DNA across human immune cells
+              </papertitle>
               <br>
-              Caleb A. Lareau, Sonia M. Dubois, <strong>Kopal Garg</strong>, Pauline Kautz, Lena Nitsch, Samantha Praktiknjo, Jeffrey M. Verboon, Wendy Lu, Eleni Mimitou, Christoph Muus, Rhea
-Malhotra, Patrick Maschmeyer, Sumit Parikh, Mark D. Fleming, Anshul Kundaje, Peter Smibert, Ansuman T. Satpathy, Aviv
-Regev, Vijay G. Sankaran, Suneet Agarwal, Leif S. Ludwig
+              Caleb A Lareau, Sonia M Dubois, Frank A Buquicchio, Yu-Hsin Hsieh, <strong> Kopal Garg </strong>, Pauline Kautz, Lena Nitsch, Samantha D Praktiknjo, Patrick Maschmeyer, Jeffrey M Verboon, Jacob C Gutierrez, Yajie Yin, Evgenij Fiskin, Wendy Luo, Eleni Mimitou, Christoph Muus, Rhea Malhotra, Sumit Parikh, Mark D Fleming, Lena Oevermann, Johannes Schulte, Cornelia Eckert, Anshul Kundaje, Peter Smibert, Ansuman T Satpathy, Aviv Regev, Vijay G Sankaran, Suneet Agarwal, Leif S Ludwig
               <br>
               <em>In submission</em>, 2022
               <a href="https://github.com/caleblareau/mgatk/">github</a>
