--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. I am passionate about leveraging deep learning, machine learning and data science to build systems for improving various aspects of life.
               </p>
               <p>
-                My research focuses on AI in healthcare. I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series, and genomic data.
+                My research focuses on ML in healthcare. I seek to develop statistical and deep learning approaches for modeling multi-variate clinical time-series, and genomic data.
               </p>
             <!--
               <p>
