--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Kopal Garg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <title>Kopal Garg - MSc CS UofT | Engineering UWaterloo '21'</title>
+    <title>Kopal Garg - MSc CS UofT | Engineering UWaterloo '21</title>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="main.css">
