--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/vector_institute_logo.jpg" alt="clean-usnob" width="120" height="120">
+              <img src="images/cartography.jpeg" alt="clean-usnob" width="120" height="120">
             </td>
             <td width="75%" valign="middle">
               <papertitle>Data Scientist and Data Engineer</papertitle>
