--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 gargkopal24[at]gmail.com &nbsp/&nbsp
                 <a>contact for CV</a> &nbsp/&nbsp
                 <a href="http://www.linkedin.com/in/gargkopal/"> LinkedIn</a> &nbsp/&nbsp
-                <a href="https://github.com/kopalgarg/"> Personal GitHub</a>
+                <a href="https://github.com/kopalgarg/"> Personal GitHub</a> &nbsp/&nbsp
                 <a href="https://github.com/kopalgarg24/"> Work GitHub</a>
               </p>
 
