--- a/index.html
+++ b/index.html
@@ -91,12 +91,6 @@
                 <name>Kopal Garg</name>
               </p>
               <p>
-                I am a masters student in Computer Science at the University of Toronto and a member of the 
-                <a href="https://vectorinstitute.ai/">Vector Institute</a>. I recently graduated from the 
-                <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering">Biomedical Engineering program</a> 
-                at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. I am passionate about leveraging deep learning, machine learning and data science to build systems for improving various aspects of life.
-              </p>
-              <p>
                 I specialize in cloud computing and deep learning, with experience developing cloud-based platforms for analyzing large genomics sequencing datasets and containerizing deep learning models for time series forecasting. 
               </p>
             
@@ -143,7 +137,7 @@
               <br>
                 Department of Computer Science, University of Toronto
               <br>
-                Sept. 2021 - <strong>2022</strong> | Toronto, ON
+                Sept. 2021 - <strong> Dec. 2022</strong> | Toronto, ON
               <p> </p> 
               <em><strong>Graduate Scholarship</strong></em>
             </td>
