--- a/index.html
+++ b/index.html
@@ -91,14 +91,11 @@
                 <name>Kopal Garg</name>
               </p>
               <p>
-                I specialize in cloud computing and deep learning, with experience developing cloud-based platforms for analyzing large genomics sequencing datasets and containerizing deep learning models for time series forecasting. 
+
+                I am  a data scientist working on problems at the intersection of machine learning and biology.
+
+
               </p>
-            
-              <p>
-              I intend to set aside a few hours each week for discussions and mentorship for early career data scientists, like myself. If you feel this could be of 
-                benefit to you, please book an open slot <a href="https://calendly.com/gargkopal24/15min">here</a>.
-              </p>
-            
 
               <p style="text-align:center">
                 gargkopal24[at]gmail.com &nbsp/&nbsp
