--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               <p>
 
                 I am  a data scientist working on problems at the intersection of machine learning and biology.
+                I enjoy cloud computing and deep learning. I have experience developing cloud-based platforms for analyzing large genomics sequencing datasets and building, and containerizing deep learning models for time series forecasting. 
 
 
               </p>
